--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>MyData Infrastructure Project testing</title>
+    <title>MyData Infrastructure Project testing 123</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
